--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "barryvdh/laravel-ide-helper": "v2.1.0",
-        "caouecs/laravel4-lang": "2.0.28",
-        "laravelcollective/html": "v5.1.9"
+        "caouecs/laravel4-lang": "2.0.28"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
