--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,19 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "sera527/Bookcrossing",
+    "description": "Site for book sharing.",
+    "keywords": ["bookcrossing", "book sharing"],
+    "authors": [
+        {
+            "name": "Sergiy Posternak",
+            "email": "serpos95@gmail.com"
+        },
+        {
+            "name": "Sluva Repeta"
+        }
+    ],
     "license": "MIT",
     "type": "project",
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
