--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sera527/Bookcrossing",
+    "name": "sera527/bookcrossing",
     "description": "Site for book sharing.",
     "keywords": ["bookcrossing", "book sharing"],
     "authors": [
